--- a/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvsdepth.html
@@ -39,7 +39,7 @@
 
 
 
-    <script src="{% static 'js/tempVsDepthGraph.js' %}" type="module"></script>
+    <script src="{% static 'js/graphs/tempVsDepthGraph.js' %}" type="module"></script>
     <script>
         var queryData = {{ queryData | safe }};
         var graphData = {{ graphData | safe }};
