--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -31,7 +31,7 @@
         </li>
     </ul>
 
-    <script src="{% static 'js/selectTab.js' %}"></script>
+    <script src="{% static 'js/utils/selectTab.js' %}"></script>
 
     <div class="tab-content" id="myTabContent">
         <div class="form-container tab-pane fade show active" id="TemperatureProfile">
@@ -77,7 +77,7 @@
     </div>
 
 
-    <script src="{% static 'js/dateRangePicker.js' %}"></script>
+    <script src="{% static 'js/utils/dateRangePicker.js' %}"></script>
 
 
 
