fix back to top button
When changing the filenames in a previous commit, I missed a few files and the button was
not in the correct location and didn't send the user back to the top of the page. These
are now both fixed.

--- a/geothermalsite/dashboard/templates/dashboard/backtotopbutton.html
+++ b/geothermalsite/dashboard/templates/dashboard/backtotopbutton.html
@@ -1,6 +1,6 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/back_to_top_button.css' %}">
-<script src="{% static 'js/back_to_top_button.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/backtotopbutton.css' %}">
+<script src="{% static 'js/backtotopbutton.js' %}"></script>
 
 <!-- Back to top button -->
 <button type="button" class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg" id="btn-back-to-top">
