--- a/geothermalsite/dashboard/templates/dashboard/tempvstime.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempvstime.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
@@ -5,20 +7,13 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
 
-
-<div>
-
-    {% load static %}
-
-    <script src="{% static 'js/utils/createCsv.js' %}"></script>
-
-    <button onclick="downloadData('tempvstime')">Download data</button>
-    <button id="downloadImage" onclick="window.downloadGraphImage('tempvstime')">Download graph</button>
-
-
-    <div class="container">
-        <canvas id="ctx"></canvas>
-    </div>
-
-    <script src="{% static 'js/graphs/tempVsTimeGraph.js' %}" type="module"></script>
+<!-- Graph code and canvas for housing the graph -->
+<script src="{% static 'js/graphs/tempVsTimeGraph.js' %}" type="module"></script>
+<div class="container">
+    <canvas id="ctx"></canvas>
 </div>
+
+<!-- Buttons for downloading the data as a CSV and the graph as an image -->
+<script src="{% static 'js/utils/createCsv.js' %}"></script>
+<button onclick="downloadData('tempvstime')">Download data</button>
+<button id="downloadImage" onclick="window.downloadGraphImage('tempvstime')">Download graph</button>
