minor fix to custom query view

--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<body style="margin:20px;">
+<body>
     <h1>Advanced API: Custom Query</h1>
     <form method="post" id="custom-query-form">
     {% csrf_token %}
