--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -2,22 +2,12 @@
 <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
 <!-- Included inline styling to override navbar's !important-flaged background color CSS -->
-<footer class="bg-info text-left text-lg-start" style="background-color:#faf3dd!important;">
+<footer class="bg-info text-center text-lg-start" style="background-color:#faf3dd!important;">
     <hr>
     <!-- Grid container -->
     <div class="container p-4">
       <!--Grid row-->
       <div class="row">
-        <!--Grid column-->
-        <div class="col">
-            <h5 class="text-uppercase">The Project</h5>
-            <p>
-                Welcome to the Carleton Geothermal Dashboard! This project was created by the Computer Science Geothermal
-                Comps Team in 2022-23 to enable Carleton community members to access the College's geothermal database.
-            </p>
-        </div>
-        <!--Grid column-->
-
         <!--Grid column-->
         <div class="col">
           <h5 class="text-uppercase">Dashboard Links</h5>
@@ -53,11 +43,14 @@
 
         <!--Grid column-->
         <div class="col">
-          <h5 class="text-uppercase">Source Code</h5>
+          <h5 class="text-uppercase">Advanced Tools</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="https://github.com/acdalal/geothermal" class="text-dark">GitHub</a>
+              <a href="https://github.com/acdalal/geothermal" class="text-dark">Source Code</a>
+            </li>
+            <li>
+              <a href="{% url 'customquery' %}" class="text-dark">Custom Query</a>
             </li>
           </ul>
 
