centering the tab forms

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -18,8 +18,8 @@
     {% endif %}
     </script>
 
-<div class="col-md-5 mx-auto">
-    <ul class="nav nav-tabs" id="myTab">
+<div class="col-md-6 mx-auto">
+    <ul class="nav nav-tabs justify-content-around" id="myTab">
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#" id="tempprofile-button" onclick="selectTab('tempprofile')">Temperature Profile</a>
         </li>
@@ -34,7 +34,7 @@
 
     <div class="tab-content" id="myTabContent">
         <div class="form-container tab-pane fade show active" id="tempprofile">
-            <div class="row">
+            <div class="row justify-content-around">
                 <div class="col-md-8 offset-md-2">
                     <form action="/" method="post">
                         {% csrf_token %}
@@ -59,7 +59,7 @@
         </div>
 
         <div class="form-container tab-pane fade" id="tempvstime">
-            <div class="row">
+            <div class="row justify-content-around">
                 <div class="col-md-8 offset-md-2">
                     <form action="/" method="post">
                         {% csrf_token %}
@@ -85,7 +85,7 @@
         </div>
 
         <div class="form-container tab-pane fade" id="tempvsdepth">
-            <div class="row">
+            <div class="row justify-content-around">
                 <div class="col-md-8 offset-md-2">
                     <form action="/" method="post">
                         {% csrf_token %}
