--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -35,7 +35,8 @@
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
 <div class="container">
-    <canvas id="ctx"></canvas>
+    {# the height attribute of the canvas defines how tall the graph displays on the page #}
+    <canvas id="ctx" height="300"></canvas>
 </div>
 
 <!-- Buttons for downloading the data as a CSV and the graph as an image -->
