fix issue where navbar had extra padding on some pages

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -6,7 +6,7 @@
 
 <h1 class="header">About</h1>
 
-<div class="container-fluid">
+<div class="container-fluid" id="about-container">
   <div class="row">
     <div class="col-2 navbar-col">
       <div id="list-example" class="list-group">
