--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -6,7 +6,7 @@
 
 <h1 class="header">Documentation</h1>
 
-<div class="container-fluid">
+<div class="container-fluid" id="documentation-container">
   <div class="row">
     <!-- Left-hand navbar for page contents -->
     <div class="col-2 navbar-col">
