--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -1,8 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
-<!-- Included inline styling to override navbar's !important-flaged background color CSS -->
-<footer class="bg-info text-center text-lg-start" style="background-color:#faf3dd!important;">
+<footer class="bg-info text-center text-lg-start" id="main-footer">
     <hr>
     <!-- Grid container -->
     <div class="container p-4">
