--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -2,7 +2,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
-<div class="jumbotron cream-background">
+<div class="jumbotron">
     <h1 class="display-4">Welcome to GeoDE!</h1>
     <p class="lead">A Carleton Geothermal Data Explorer developed by the Geothermal CS Comps Team, 2022-23</p>
     <hr class="my-4">
