--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
 <!-- Bootstrap 4 Navbar: https://getbootstrap.com/docs/4.0/components/navbar/ -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary cream-background">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" id="main-navbar">
     <div class="container-fluid">
       <a class="navbar-brand mb-0 h1 font-weight-bold" href="{% url 'index' %}">Carleton GeoDE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
