--- a/geothermalsite/dashboard/static/css/navbar.css
+++ b/geothermalsite/dashboard/static/css/navbar.css
@@ -1,7 +1,13 @@
+@import "generalSiteStyles.css";
+
 .navbar .navbar-nav .nav-link, .navbar-brand {
     color: black;
 }
 
 .navbar .navbar-nav .nav-link:hover, .navbar-brand:hover {
     color: rgb(85, 85, 85);
+}
+
+#main-navbar {
+    background-color: var(--primary-background-color);
 }
