--- a/geothermalsite/dashboard/static/css/generalSiteStyles.css
+++ b/geothermalsite/dashboard/static/css/generalSiteStyles.css
@@ -1,4 +1,13 @@
-/* This files contains custom colors and styles we chose for our website's design. */
+/* This files contains custom colors and styles for the website.
+
+In particular, changing --primary-background-color and --primary-text-color
+will change those respective attributes for the entire site.
+
+Some elements that have minimal custom styling, such as the jumbotron on
+the main page, have styling in this file as well. Other elements
+that have their own css files may import this file to access the
+variables defined here as well.
+*/
 
 /* Define variables for our custom color palette */
 :root {
@@ -80,8 +89,4 @@ label {
 so put them here rather than dedicated css files */
 .jumbotron {
     background-color: var(--primary-background-color);
-}
-
-#main-footer {
-    background-color: var(--primary-background-color) !important;
 }
