fix bug where footer styling changes after tempProfile form submission

--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -21,8 +21,8 @@
 
     <details>
         <summary>more info</summary>
-            <div class="list-parent">
-                <ul>
+            <div class="centered-left-list-parent">
+                <ul class="centered-left-list">
                     <li>Stratigraphy plots are fun..... </li>
                     <li>One thing that's important to know is that .....</li>
                     <li>One thing that's important...</li>
