--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -11,10 +11,10 @@
 
 <div id="formWrapper" style="text-align:center;">
     {# Header and information about the query #}
-    <h1>Stratigraphy</h1>
+    <h1>Temperature Profile</h1>
     <p>
         <em>
-            Stratigraphy plots visualize temperature data with the depths and corresponding stratigraphic
+            Temperature profile plots visualize temperature data with the depths and corresponding stratigraphic
             layers on the y-axis.
         </em>
     </p>
@@ -23,9 +23,9 @@
         <summary>more info</summary>
             <div class="list-parent">
                 <ul>
-                    <li>Stratigraphy plots are fun..... </li>
-                    <li>One thing that's important to know is that .....</li>
-                    <li>One thing that's important...</li>
+                    <li>Each line represents a single day or week, depending on the range of time you've specified.</li>
+                    <li>Querying outages may generate visualizations with unexpected contours.</li>
+                    <li>Check if you've queried an outage <u><a class="link" href="{% url 'documentation' %}">here</a></u> if you're unsure about your plot's behavior.</li>
                 </ul>
             </div>
     </details>
