Changed all outside links to open in new tab

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -26,11 +26,11 @@
         <h4 id="list-about-project">About the Project</h4>
         <p>
             Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community.
-            To learn more about the background of the project, visit the <u><a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php">Carleton computer science comps page</a></u>.
+            To learn more about the background of the project, visit the <u><a class="link" href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php" target="_blank">Carleton computer science comps page</a></u>.
         </p>
         <h4 id="about-geothermal">About the Geothermal Wells</h4>
         <p>
-            Carleton's Geothermal Well system is part of <u><a class="link" href="https://www.carleton.edu/geothermal/">Carleton's utility master plan</a></u>, which includes a goal of being carbon-free in 2050.
+            Carleton's Geothermal Well system is part of <u><a class="link" href="https://www.carleton.edu/geothermal/" target="_blank">Carleton's utility master plan</a></u>, which includes a goal of being carbon-free in 2050.
             The data on this website pertains to the geothermal well system that was spearheaded by the Carleton Aquifer Research Lab (CARL). The Geothermal system at Carleton consists of three interconnected borefields.
             These are located on the Bald Spot, the Mini-Bald Spot, and Bell Field. The Bald Spot is the largest system
             and it has 134 vertical boreholes that each run about 525 feet deep. The Mini-Bald Spot has 77
