--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -209,7 +209,7 @@
           The Geothermal Data API supports making more advanced queries,
           including direct PostGreSQL queries. To query the database directly, visit the <u><a class="link" href="{% url 'customquery' %}">custom query page</a></u>.
           To view our API, visit
-          <u><a class="link" href="https://github.com/acdalal/geothermal"> our repository on GitHub</a></u>.
+          <u><a class="link" href="https://github.com/acdalal/geothermal" target="_blank"> our repository on GitHub</a></u>.
         </p>
       </div>
       <!-- end scrollspy -->
