--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -32,10 +32,10 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a id="footer-link" href="https://www.carleton.edu/">Home</a>
+              <a id="footer-link" href="https://www.carleton.edu/" target="_blank">Home</a>
             </li>
             <li>
-              <a id="footer-link" href="https://www.carleton.edu/geothermal/">Utility Master Plan</a>
+              <a id="footer-link" href="https://www.carleton.edu/geothermal/" target="_blank">Utility Master Plan</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,7 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a id="footer-link" href="https://github.com/acdalal/geothermal">Source Code</a>
+              <a id="footer-link" href="https://github.com/acdalal/geothermal" target="_blank">Source Code</a>
             </li>
             <li>
               <a id="footer-link" href="{% url 'customquery' %}">Custom Query</a>
