--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -22,7 +22,7 @@
         </ul>
 
         <div class="ml-auto">
-          <a href="https://www.carleton.edu/" alt="Carleton College Blue Logo">
+          <a href="https://www.carleton.edu/" target="_blank" alt="Carleton College Blue Logo">
             <img class="logo" src="{% static 'img/Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="28">
           </a>
         </div>
