--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -35,11 +35,12 @@
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
 <div class="container">
+    <div id="viewer">
     {# the height attribute of the canvas defines how tall the graph displays on the page #}
     <canvas id="ctx" height="300"></canvas>
+    <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+    <script src="{% static 'js/utils/createCsv.js' %}"></script>
+    <button onclick="downloadData('stratigraphy')">Download data</button>
+    <button id="downloadImage" onclick="window.downloadGraphImage('stratigraphy')">Download graph</button>
+    </div>
 </div>
-
-<!-- Buttons for downloading the data as a CSV and the graph as an image -->
-<script src="{% static 'js/utils/createCsv.js' %}"></script>
-<button onclick="downloadData('stratigraphy')">Download data</button>
-<button id="downloadImage" onclick="window.downloadGraphImage('stratigraphy')">Download graph</button>
