--- a/geothermalsite/dashboard/templates/dashboard/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/tempprofile.html
@@ -23,9 +23,9 @@
         <summary>more info</summary>
             <div class="centered-left-list-parent">
                 <ul class="centered-left-list">
-                    <li>Stratigraphy plots are fun..... </li>
-                    <li>One thing that's important to know is that .....</li>
-                    <li>One thing that's important...</li>
+                    <li>Each line represents a single day or week, depending on the range of time you've specified.</li>
+                    <li>Querying outages may generate visualizations with unexpected contours.</li>
+                    <li>Check if you've queried an outage <u><a class="link" href="{% url 'documentation' %}">here</a></u> if you're unsure about your plot's behavior.</li>
                 </ul>
             </div>
     </details>
