--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -15,6 +15,7 @@
     {% if queryData %}
         var queryData = {{ queryData | safe }}
         var graphData = {{ graphData | safe }}
+        var units = {{ units }}
     {% endif %}
     </script>
 
@@ -38,20 +39,17 @@
                 <div class="col-md-8 offset-md-2">
                     <form action="/" method="post">
                         {% csrf_token %}
-                        <div class="left">
-                            {{ temperatureProfileForm.boreholeNumber.label }}
-                            {{ temperatureProfileForm.boreholeNumber }}
+                        {{ temperatureProfileForm.boreholeNumber.label }}
+                        {{ temperatureProfileForm.boreholeNumber }}
 
-                            {{ temperatureProfileForm.temperatureProfileDateRange.label }}
-                            {{ temperatureProfileForm.temperatureProfileDateRange }}
+                        {{ temperatureProfileForm.temperatureProfileDateRange.label }}
+                        {{ temperatureProfileForm.temperatureProfileDateRange }}
 
-                            {{ temperatureProfileForm.temperatureProfileTimeSelector.label }}
-                            {{ temperatureProfileForm.temperatureProfileTimeSelector }}
-                        </div>
-                        <div class="right">
-                            {{ temperatureProfileForm.tempProfileUnits.label }}
-                            {{ temperatureProfileForm.tempProfileUnits }}
-                        </div>
+                        {{ temperatureProfileForm.temperatureProfileTimeSelector.label }}
+                        {{ temperatureProfileForm.temperatureProfileTimeSelector }}
+
+                        {{ temperatureProfileForm.tempProfileUnits.label }}
+                        {{ temperatureProfileForm.tempProfileUnits }}
                         <input class="btn btn-secondary form-control submit-button" type="submit" value="Submit" name="temperature-profile"/>
                     </form>
                 </div>
@@ -63,21 +61,17 @@
                 <div class="col-md-8 offset-md-2">
                     <form action="/" method="post">
                         {% csrf_token %}
+                        {{ tempOverTimeForm.boreholeNumber.label }}
+                        {{ tempOverTimeForm.boreholeNumber }}
 
-                        <div class="left">
-                            {{ tempOverTimeForm.boreholeNumber.label }}
-                            {{ tempOverTimeForm.boreholeNumber }}
+                        {{ tempOverTimeForm.tempVsTimeDateRange.label }}
+                        {{ tempOverTimeForm.tempVsTimeDateRange }}
 
-                            {{ tempOverTimeForm.tempVsTimeDateRange.label }}
-                            {{ tempOverTimeForm.tempVsTimeDateRange }}
+                        {{ tempOverTimeForm.tempVsTimeDepth.label }}
+                        {{ tempOverTimeForm.tempVsTimeDepth }}
 
-                            {{ tempOverTimeForm.tempVsTimeDepth.label }}
-                            {{ tempOverTimeForm.tempVsTimeDepth }}
-                        </div>
-                        <div class="right">
-                            {{ tempOverTimeForm.tempVsTimeUnits.label }}
-                            {{ tempOverTimeForm.tempVsTimeUnits }}
-                        </div>
+                        {{ tempOverTimeForm.tempVsTimeUnits.label }}
+                        {{ tempOverTimeForm.tempVsTimeUnits }}
                         <input class="btn btn-secondary form-control submit-button" type="submit" value="Submit" name="temperature-time"/>
                     </form>
                 </div>
@@ -90,17 +84,14 @@
                     <form action="/" method="post">
                         {% csrf_token %}
 
-                        <div class="left">
-                            {{ tempOverDepthForm.boreholeNumber.label }}
-                            {{ tempOverDepthForm.boreholeNumber }}
+                        {{ tempOverDepthForm.boreholeNumber.label }}
+                        {{ tempOverDepthForm.boreholeNumber }}
 
-                            {{ tempOverDepthForm.tempVsDepthTimestamp.label }}
-                            {{ tempOverDepthForm.tempVsDepthTimestamp }}
-                        </div>
-                        <div class="right">
-                            {{ tempOverDepthForm.tempVsDepthUnits.label }}
-                            {{ tempOverDepthForm.tempVsDepthUnits}}
-                        </div>
+                        {{ tempOverDepthForm.tempVsDepthTimestamp.label }}
+                        {{ tempOverDepthForm.tempVsDepthTimestamp }}
+
+                        {{ tempOverDepthForm.tempVsDepthUnits.label }}
+                        {{ tempOverDepthForm.tempVsDepthUnits}}
                         <input class="btn btn-secondary form-control submit-button" type="submit" value="Submit" name="temperature-depth"/>
                     </form>
                 </div>
