--- a/geothermalsite/static/css/generalSiteStyles.css
+++ b/geothermalsite/static/css/generalSiteStyles.css
@@ -42,25 +42,32 @@ body {
 }
 
 form {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    margin-bottom: 20px;
   }
 
 .left {
-    display: flex;
     float: left;
-    flex-direction: column;
-    justify-content: flex-start;
 }
 
 .right {
-    display: flex;
     float: left;
-    flex-direction: column;
-    align-items: flex-start;
+}
+
+.spacer
+{
+    width: 100%;
+    height: 95px;
 }
 
 label {
     margin-bottom: 10px;
+}
+
+
+#myTabContent {
+    margin-top: 10px;
+}
+
+.submit-button {
+    margin-top: 10px;
 }
